# clawflake

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  clawflake.rs  go.mod  go.sum
.github/workflows/: ci.yml
api/nc0/clawflake/generator/v3/: generator.pb.go  generator.proto  generator_grpc.pb.go
api/nicolaspl/clawflake/generator/v3/: generator.pb.go  generator.proto  generator_grpc.pb.go
cmd/generator/: generator.go  id.go  main.go
cmd/testclient/: main.go
doc/: 404.html  index.html  robots.txt  sitemap.xml
doc/css/: style.css
proto/: clawflake.proto
proto/n1c00o/clawflake/v2/: clawflake.proto
scripts/: health_check.sh
src/: client.rs  id_worker.rs  logger.rs  server.rs
tools/protobuf/: compile.sh  format.sh
website/: README.md
website/src/: index.html  license.txt
