[package]
name = "clawflake"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "clawflake-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "clawflake-client"
path = "src/client.rs"

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
serde_json = "1.0.66"
parking_lot = "0.11.1"
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"
