[package]
name = "clawflake"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
tonic = { version = "0.8.2", features = ["prost"] }
prost = "0.11.0"
prost-types = "0.11.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = "0.8.2"
